# fitPro

./: .gitignore  PlantDisease_CNN_Colab - Copy.ipymb  README.md  app.py  build_dist.py  ekstraksi_video.py  export_js.py  fix_threshold.py  grep.exe.stackdump  label_encoder.pkl  package-lock.json  package.json  remove_features.py  scaler.pkl  setup_android.ps1  setup_offline.py  split_js.py  train_model.py
ml/: train_model.py
scripts/: build_dist.py  export_js.py  setup_offline.py  split_js.py
scripts/archive/: replace_russian_twists.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
static/: grep.exe.stackdump  script.js  style.css
templates/: index.html
