[package]
name = "fitai-pro"
version = "1.0.0"
description = "FitAI Pro - Real-Time AI Exercise Tracker"
authors = ["FitAI Team"]
edition = "2021"

[lib]
name = "fitai_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2.1.3"
tauri-plugin-http = "2.5.9"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
